fix(diag): добавляем контейнеру для заявок в блоке unDispatched padding-right, т.к. контент не должен учитывать область под scrollbar

--- a/source/scss/blocks/scrollbar.scss
+++ b/source/scss/blocks/scrollbar.scss
@@ -40,6 +40,10 @@
   cursor: pointer;
 }
 
+.undis-content-padding {
+  padding-right: 10px;
+}
+
 .main-undispatche-scroll-cont {
   height: 230px;
 }
